KCM Automounter: invert text description of AutomountUnknownDevices which was inverted

Make it more clearer that this settings depends on AutomountOnLogin and AutomountOnPlugin to be set.

BUG: 432026